--- a/Calculator.css
+++ b/Calculator.css
@@ -3,5 +3,10 @@
   border: 15px ;
   padding: 50px;
   margin: 20px;
-  
+}
+#output {
+	margin: 2px;
+	border: 15px solid black;
+	padding: 50px;
+  	
 }
