--- a/Calculator.css
+++ b/Calculator.css
@@ -4,9 +4,22 @@
   padding: 50px;
   margin: 20px;
 }
-#output {
-	margin: 2px;
-	border: 15px solid black;
-	padding: 50px;
+#out {
+	position: absolute;
+  left: 40px;
+  width: 300px;
+  height: 80px;
+  border: solid black 1px;
+  box-shadow: 1px 2px;
+  background-color: yellow;
+  text-align: center;
+  box-sizing: border-box;
   	
+}
+.grid-container {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center
 }
