--- a/Calculator.css
+++ b/Calculator.css
@@ -5,7 +5,7 @@
   margin: 20px;
 }
 #out {
-	position: absolute;
+	position: center;
   left: 40px;
   width: 300px;
   height: 80px;
@@ -15,6 +15,7 @@
   text-align: center;
   box-sizing: border-box;
   font-size: 25px;
+  
   	
 }
 .grid-container {
@@ -30,4 +31,8 @@
 #img {
   height: 400px;
   width: 50%;
+}
+#erase{
+  padding-top: 25px;
+  padding-bottom: 50px;
 }
