--- a/Calculator.css
+++ b/Calculator.css
@@ -1,74 +1,18 @@
-
-#out {
-	position: center;
-  left: 40px;
-  width: 300px;
-  height: 80px;
-  border: solid black 1px;
-  box-shadow: 1px 2px;
-  background-color: white;
-  text-align: center;
-  box-sizing: border-box;
-  font-size: 25px;
-  
-  	
-}
-.grid-container {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
-  width:65px;
-  height: 65px;
-}
-.grid-container:hover {
-  background-color: rgba(255, 255, 255, 1);
-}
-#grad {
+#body {
   background-image: linear-gradient(90deg, lightblue, white);
 }
-#img {
-  height: 400px;
-  width: 50%;
-}
-#erase{
-  padding-top: 25px;
-  padding-bottom: 50px;
-}
-#display{
-  font-size:45px;
-  text-align:right;
-  overflow:auto;
-  background-color:white;
-  width: 320px;
-  height: 100px;
+
+h1 {
+  font-size: 600%;
+  color: #090082;
 }
 #calculator {
-  width: 400px;
+  width: 300px;
   background-color: #484848;
   padding: 20px;
   border-radius: 10px;
 }
-#equal{
-  width: 203px;
-  background-color: #05fa94;
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
-  height: 65px;
-}
-#equal:hover {
-  background-color: #05faa3;
-}
 
-#clear{
-  background-color:#ba210d;
-}
-#clear:hover{
-    background-color:#ba219d;
-}
 #result {
   width: 260px;
   height: 55px;
@@ -77,22 +21,81 @@
   margin-bottom: 15px;
   text-align: right;
   line-height: 34px;
-  font-family: digital;
+  font-family: Times-New-Roman;
   padding: 0px 5px 0px 5px;
   font-size: 25px;
   overflow: hidden;
   box-shadow: inset 0 0px 3px;
 }
+
+#clear{
+  background-color:#ba210d;
+}
+
+#clear:hover{
+    background-color:#ba219d;
+}
+
+.grid-container {
+  background-color: #e0e0e0;
+  border: 1px solid rgb(0, 0, 0);
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+  width:65px;
+  height: 65px;
+  font-weight: bold;
+}
+
+.grid-container:hover {
+  background-color: #cfcaca;
+}
+
+#img {
+  height: 400px;
+  width: 50%;
+}
+
 .operators{
   background-color: #ed9a00;
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
   width:65px;
   height: 65px;
+  font-weight: bold;
 }
 .operators:hover{
-  background-color: #ed9a30;
+  background-color: #ed6100;
+}
+
+#equal{
+  width: 203px;
+  background-color: #05fa94;
+  border: 1px solid rgb(0, 0, 0);
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+  height: 65px;
+  font-weight: bold;
+}
+
+#equal:hover {
+  background-color: #22ab1d;
+}
+
+.parentheses {
+  background-color: #ed9a00;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+  width:65px;
+  height: 65px;
+  font-weight: bold;
+}
+.parentheses:hover{
+  background-color: #ed6100;
 }
 
