--- a/Calculator.css
+++ b/Calculator.css
@@ -45,6 +45,7 @@ h1 {
   width:65px;
   height: 65px;
   font-weight: bold;
+  border-radius: 5px;
 }
 
 .grid-container:hover {
@@ -65,13 +66,13 @@ h1 {
   width:65px;
   height: 65px;
   font-weight: bold;
+  border-radius: 5px;
 }
 .operators:hover{
   background-color: #ed6100;
 }
 
 #equal{
-
   width: 134px;
   background-color: #05fa94;
   border: 1px solid rgb(0, 0, 0);
@@ -80,6 +81,7 @@ h1 {
   text-align: center;
   height: 65px;
   font-weight: bold;
+  border-radius: 5px;
 }
 
 #equal:hover {
@@ -95,6 +97,7 @@ h1 {
   width:65px;
   height: 65px;
   font-weight: bold;
+  border-radius: 5px;
 }
 .parentheses:hover{
   background-color: #ed6100;
